# faketty

./: Cargo.toml  README.md
.github/workflows/: ci.yml  install.yml
examples/: faketty-min.rs
src/: error.rs  lib.rs  main.rs
tests/: test.rs  test.sh
