[package]
name = "faketty"
version = "1.0.9"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["command-line-utilities", "os::unix-apis"]
description = "Wrapper to exec a command in a pty, even if redirecting the output"
edition = "2021"
keywords = ["tty"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/faketty"

[dependencies]
clap = { version = "3.2.5", features = ["deprecated"] }
nix = { version = "0.25", default-features = false, features = ["fs", "process", "term"] }

[dev-dependencies]
scratch = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
